@@ -1,3 +1,9 @@
+Sun Sep 16 12:32:58 EEST 2001  Pekka Riikonen <priikone@silcnet.org>
+
+	* Assure that the packet length digged from the actual packet
+	  is something sensible in the silc_packet_decrypt_rest_special
+	  in lib/silccrypt/silcpacket.c.
+
 Sat Sep 15 13:29:17 EEST 2001  Pekka Riikonen <priikone@silcnet.org>
 
 	* Check that the public key exists in the GETKEY command before
